# alltray

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  Doxyfile  HACKING  Makefile.am  Makefile.in  NEWS  README  README.in  README.md  REQUIREMENTS  acinclude.m4  aclocal.m4  alltray.1  alltray.spec  autogen.sh  clean-tree.sh  config.h.in  configure  configure.ac  configure.in  devel-autogen.sh  ltmain.sh
autopackage/: default.apspec.in
data/: Makefile.am  alltray.desktop  alltray.desktop.in
debian/: README.Debian  changelog  control  copyright  rules
doc/: crash-help.txt
images/: Makefile.am  alltray.xcf.bz2  alltray_ctt.xpm
lib/: Makefile.am  Makefile.in  nomap.c
lib/nomap/: nomap.c
man/: Makefile.am  alltray.1.in
po/: LINGUAS  Makevars  POTFILES  POTFILES.in  alltray.pot  ar.po  bg.po  cs.po  da.po  de.po  en_GB.po  en_US.po  es.po  fi.po  fr.po  gl.po  he.po  hi.po  it.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po  zh_CN.po
src/: About.vala  AllTray.vala  AllTrayCtt.vala  AllTrayCttHelper.vala  Application.vala  AttachHelper.vala  Ctt.vala  Debug.vala  DisplayManager.vala  GNUmakefile  GtkStatusIcon.vala  Hotkey.vala  Makefile.am  Makefile.in  Process.vala  PromptDialog.vala  TrayIcon.vala  TrayMenu.vala  UnixProcessInfo.vala  WindowManager.vala  XWrapper.vala  alltray-ctt-helper.c  alltray-ctt-helper.h  alltray-ctt-interpreter.c  alltray-ctt-interpreter.h  alltray-ctt-windowlist.c  alltray-ctt-windowlist.h  alltray.h  balloon_message.c  balloon_message.h  binreloc.c  binreloc.h  child.c  child.h  clickmode.c  clickmode.h  clientwin.c  clientwin.h  cmdline.c  common.c  (+37 more)
src/unix_process/: Makefile.am  freebsd_process_info.c  linux_process_info.c
tests/: GtkDemandsAttention.vala  GtkIconChange.vala  Makefile.am
utils/: build-full-debug.sh  build-release.sh  clean-tree.sh  latest-rev.py  release-changelog.sh
utils/vala-patches/0.7.3/: 0001-Enhance-X11-bindings-and-fix-some-cnames.patch  0001-x11.vapi-fixes-for-C-code-generation-of-types.patch  0002-Fix-Gdk.XEvent-GDK-binding.patch  0003-Fix-X11-bindings-and-provide-enhancements-to-them.patch
vapi/: Makefile.am  alltray.vapi  gtop_glue.vapi  libgtop-2.0.vapi  libx11.vapi  stdc.vapi  unix_process.vapi  x11_glue.vapi
