## Process this file with automake to produce Makefile.in

man_MANS=alltray.1

SUBDIRS = src lib

EXTRA_DIST = \
	autogen.sh \
	alltray.1 \
  alltray.desktop \
  alltray.png \
  autopackage/default.apspec.in
  
appsdir = $(datadir)/applications
apps_DATA = alltray.desktop

icondir = $(datadir)/pixmaps
icon_DATA = alltray.png
