dnl Process this file with autoconf to produce a configure script.


AC_INIT(configure.in)
AC_PREFIX_DEFAULT(/usr)
AM_INIT_AUTOMAKE(alltray, 0.61)
AM_CONFIG_HEADER(config.h)


AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AM_LD_PRELOAD

if test x"$_HAVE_LD_PRELOAD" = x"no"; then
  AC_MSG_WARN([])
  AC_MSG_WARN([     Function preload check failed!])
  AC_MSG_WARN([     If this is a linux box, please report])
  AC_MSG_WARN([     this to email@jochen-baier.de;])
  AC_MSG_WARN([     else please try to fix it and let me know.])
  AC_MSG_WARN([])
  AC_MSG_ERROR([       Will abort now.])
fi

AM_BINRELOC

pkg_modules="gtk+-2.0 >= 2.2.0 gdk-2.0 gdk-pixbuf-xlib-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
lib/Makefile
autopackage/default.apspec
])

if test "x$br_cv_binreloc" = "xno"; then
  AC_MSG_WARN([])
  AC_MSG_WARN([     Binary relocation is not working!])
  AC_MSG_WARN([     If this is a linux box, please report])
  AC_MSG_WARN([     this to email@jochen-baier.de;])
  AC_MSG_WARN([     else please try to fix it and let me know.])
  AC_MSG_WARN([])
  AC_MSG_WARN([     Alltray will work with limited features. (or not at all)])
  AC_MSG_WARN([])
fi
