dnl Process this file with autoconf to produce a configure script.


AC_INIT(configure.in)
AC_PREFIX_DEFAULT(/usr)
AM_INIT_AUTOMAKE(alltray, 0.67)
AM_CONFIG_HEADER(config.h)


AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AM_BINRELOC

pkg_modules="gtk+-2.0 >= 2.2.0 gdk-2.0 gconf-2.0 gdk-pixbuf-xlib-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
lib/Makefile
autopackage/default.apspec
])
