dnl Process this file with autoconf to produce a configure script.


AC_INIT(configure.in)
AC_PREFIX_DEFAULT(/usr)
AM_INIT_AUTOMAKE(alltray, 0.70)
AM_CONFIG_HEADER(config.h)


AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AM_BINRELOC


AC_ARG_ENABLE(gconf,
	[   --disable-gconf	Disable gconf],
	[ if test "$enableval" = "no"; then
		user_disabled_gconf=1
	  fi ],
	[ user_disabled_gconf=0 ])

AC_MSG_CHECKING(if gconf is disabled)
if test "$user_disabled_gconf" = 1; then
	AC_MSG_RESULT(yes)
  pkg_modules="gtk+-2.0 >= 2.2.0 gdk-2.0 gdk-pixbuf-xlib-2.0"
else
	AC_MSG_RESULT(no)
  AC_DEFINE(GCONF_NOT_DISABLED,1,Define if gconf is not disabled)
  pkg_modules="gtk+-2.0 >= 2.2.0 gdk-2.0 gconf-2.0 gdk-pixbuf-xlib-2.0"
fi


PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
lib/Makefile
])
